--- a/app/static/main.css
+++ b/app/static/main.css
@@ -2,4 +2,7 @@ body {
   font: 100% Helvetica, sans-serif;
   color: #333; }
 
+.hidden {
+  visibility: hidden; }
+
 /*# sourceMappingURL=main.css.map */
