--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Stepic.org statistics</title>
-      <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+      <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
       <link href="/static/main.css" rel="stylesheet">
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+      <script src="/static/main.js"></script>
+
     <style>.content {padding-top: 80px;}</style>
   </head>
 
