--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Stepic.org statistics</title>
-      <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+      <link href="/static/external_code/bootstrap.min.css" rel="stylesheet">
       <link href="/static/main.css" rel="stylesheet">
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+      <script src="/static/external_code/jquery.min.js"></script>
+      <script src="/static/external_code/bootstrap.min.js"></script>
       <script src="/static/main.js"></script>
 
     <style>.content {padding-top: 80px;}</style>
@@ -21,6 +21,9 @@
           <h2>
               <a href="/" class="brand">Stepic Studio Recordings</a> <small>Open Data from Stepic.org</small>
           </h2>
+            {% if not g.user.is_anonymous() %}
+            <p>User: {{g.user}} <span><a href="/logout">Logout</a> </span></p>
+            {% endif %}
         </div>
         <div class="navbar-collapse">
         </div><!--/.nav-collapse -->
@@ -30,8 +33,8 @@
 
     <div class="container">
       <div class="content">
-        {% block page_header %}{% endblock %}
-        {% block content %}{% endblock %}
+          {% block page_header %}{% endblock %}
+          {% block content %}{% endblock %}
       </div>
     </div>
     {% block js_footer %}{% endblock %}
