--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1,8 +1,15 @@
 body {
-  font: 100% Helvetica, sans-serif;
-  color: #333; }
+  font: 100% Helvetica, sans-serif; }
+
+.not-done {
+  background: #dd787d;
+  color: #000000; }
 
 .hidden {
   visibility: hidden; }
+
+.is-done {
+  background: #a1dd89;
+  color: #FFF; }
 
 /*# sourceMappingURL=main.css.map */
