--- a/app/static/main.sass
+++ b/app/static/main.sass
@@ -17,3 +17,14 @@ body
 .is-done
   background: $done-bg-color
   color: $done-color
+
+.delete-record
+  float: right
+
+.hide-list-element
+  visibility: hidden
+  display: none
+
+.list-element-top-block-span
+  width: 100px
+  display: inline-block
