--- a/app/templates/list_element.html
+++ b/app/templates/list_element.html
@@ -2,5 +2,5 @@
 
 {% block list_element %}
     {% import "list_elem_macro.html" as macro %}
-        {{ macro.lelem(item)}}
+        {{ macro.lelem(item, UserName, UserNameAbove)}}
 {% endblock %}
