collapsing for same user videos added

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -23,4 +23,7 @@ body {
   width: 100px;
   display: inline-block; }
 
+.is-vid-container {
+  float: right; }
+
 /*# sourceMappingURL=main.css.map */
