--- a/app/templates/hiddenTemplate.html
+++ b/app/templates/hiddenTemplate.html
@@ -1,1 +1,3 @@
-<p>Contains {{hidden_value}} more videos</p>
+<span class="is-vid-container">
+    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+</span>
